# sift

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/sift-server/: Cargo.toml
crates/sift-server/src/: main.rs
crates/siftd/: Cargo.toml  README.md  notes.md
crates/siftd/src/lib/: content.rs  entry.rs  metadata.rs  mod.rs
crates/siftd/src/lib/handler/: url.rs
crates/siftd/src/lib/parser/: html.rs  mod.rs
nix/shell/: default.nix
src/lib/similarity/: cosine.rs  idf.rs  mod.rs  tf.rs  tf_idf.rs  token.rs
