[package]
name = "siftd"
version.workspace = true
edition.workspace = true
autobins = false
publish = false

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
clap = {version = "4.5.46", features = ["derive"]}
color-eyre = "0.6.5"
hyper = { version = "1.7.0" }
reqwest = "0.12.23"
serde = "1.0.219"
sqlx = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"


[lib]
name = "libsift"
path = "src/lib/mod.rs"

[[bin]]
name = "siftd"
path = "src/bin/main.rs"
